# opencrab

./: .env  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README_CN.md  RELEASE.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  rename_project.py  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  mobile.yml  publish-release.yml  release-dryrun.yml  release.yml
0deron/alldoc/: 2026-03-23-bp-context-flow.md  2026-03-23-bp-full-simulation-manual-mode.md  2026-03-23-non-seecrab-api.md  2026-03-23-seecrab-api.md  2026-03-23-webapp-api-complete.md  2026-03-24-bp-chat-intent-routing-design.md  2026-03-24-bp-chat-intent-routing-requirements.md  2026-03-26-bp-context-precise-restoration-design.md  2026-03-26-bp-switch-task-edit-output-llm-context-analysis.md  2026-04-11-bp-parameter-extraction-and-optimization-analysis.md  2026.3.27-BP任务独立SQLite持久化技术方案.md
0deron/docs/: 202603142052-openakita-agent-system-analysis.md  202603142052-seeagent-agent-system-analysis.md  202603142112-agent-lifecycle-and-context-management.md  20260411-agent-delegation-message-flow.md  bp_switch_and_bp_edit_context_flow.md
0deron/readx/: 2026-03-26-bp-switch-task-bp-edit-output-llm-context-deep-dive.md
0mockservice/camera_search/: generate_mock_data.py  main.py  requirements.txt
apps/seecrab/: index.html  package-lock.json  package.json  vite.config.ts
apps/setup-center/: package.json  vite.config.ts
best_practice/camera-feature-pipeline/: config.yaml
best_practice/camera-frame-search/: config.yaml
best_practice/competitor-analysis/: config.yaml
best_practice/content-pipeline/: config.yaml
best_practice/market-research-report/: config.yaml
best_practice/technical-review/: config.yaml
bug-reports/: desktop-chat-concurrent-streaming-fix.md
cloud/aliyun-feedback-function/: README.md  index.py
cloud/bug-report-worker/: wrangler.toml
data/: llm_endpoints.json.example
devops/: server.sh
docs/: DINGTALK_IM_NOTES.md  ONEBOT_IM_NOTES.md  README.md  SeeAgent_公众号规划与配图需求.md  SeeAgent_功能特点总览.md  SeeAgent_用户功能介绍.md  SeeAgent_自媒体宣传Brief.md  agent-org-technical-design.md  agent-org-user-guide.md  agent-sharing-spec.md  architecture.md  bp-manual-mode-flow.md  browser-auth-guide.md  configuration-guide.md  configuration.md  dependencies.md  deploy.md  deploy_en.md  desktop-app-guide.md  desktop-app-guide_en.md  desktop-terminal-improvements.md  feedback-admin-guide.md  getting-started.md  im-channel-setup-tutorial.md  im-channel-tasks.md  im-channels.md  llm-api-capabilities-research.md  llm-provider-setup-tutorial.md  llm-tool-call-formats.md  mcp-integration.md  message-queue-and-interrupt.md  multi-agent-architecture.md  open-issues.md  persona-and-liveness.md  prompt_structure.md  release-playbook.md  skill-loading-architecture.md  skill-usage-guide.md  skills.md  system-commands.md  (+4 more)
docs/0XYZ/: README.md  opencrab项目模块详解.md
docs/api-doc/: SeeCrab-API接口文档-v1.0-20260324.md  SeeCrab-API接口文档-v1.1-20260330.md  SeeCrab-API接口文档-v1.1-20260401.md  SeeCrab-API接口文档-v1.2-20260416.md  serach-platform-api-2026.4.16.md
docs/architecture/: memory-redesign.md
docs/plans/: 2026-03-16-seecrab-session-bugs.md  2026-03-16-session-title-llm-design.md  platform-incentive-openclaw-compat.md
docs/prompts/: PROMPT_build.md  PROMPT_plan.md
examples/: .env.example
identity/: AGENT.md.example  CREDITS.md  SOUL.md.example  USER.md.example
identity/runtime/: agent.core.md  soul.summary.md
mcps/: README.md
mcps/web-search/: SERVER_METADATA.json
prompts/: selfcheck_system.md
scripts/: backfill_versions.py  bp_extract_diag.py  cleanup_memory_db.py  cleanup_releases.py  deploy.ps1  deploy.sh  feedback.py  generate_latest_json.py  generate_release_manifest.py  generate_skill_i18n.py  llm_diag.py  migrate_conversation_history.py  migrate_memories.py  quickstart.ps1  quickstart.sh  run_org_live_test.py  run_telegram_bot.py  run_tests.py  test_17_changes.py  test_cli_session_unify.py  test_feishu.py  test_memory_e2e_v2.py  test_memory_e2e_v3.py  test_model_switch.py  test_org_full_task.py  tool_parallel_demo.py  update_task_tools.py  version.py
skills/: ATTRIBUTION.md
skills/algorithmic-art/: SKILL.md
skills/apify-scraper/: SKILL.md
skills/baoyu-image-gen/: SKILL.md
skills/bilibili-watcher/: SKILL.md
skills/canvas-design/: SKILL.md
skills/changelog-generator/: SKILL.md
skills/chinese-novelist/: SKILL.md
skills/chinese-writing/: SKILL.md
skills/code-review/: SKILL.md
skills/content-research-writer/: SKILL.md
skills/datetime-tool/: SKILL.md
skills/doc-coauthoring/: SKILL.md
skills/docx/: SKILL.md
skills/douyin-tool/: SKILL.md
skills/file-manager/: SKILL.md
skills/frontend-design/: SKILL.md
skills/github-automation/: SKILL.md
skills/gmail-automation/: SKILL.md
skills/google-calendar-automation/: SKILL.md
skills/image-understander/: SKILL.md
skills/image-understanding/: SKILL.md
skills/internal-comms/: SKILL.md
skills/knowledge-capture/: SKILL.md
skills/mcp-builder/: SKILL.md
skills/mcp-installer/: SKILL.md
skills/notebooklm/: SKILL.md
skills/obsidian-skills/: SKILL.md
skills/pdf/: SKILL.md
skills/ppt-creator/: SKILL.md
skills/pptx/: SKILL.md
skills/pretty-mermaid/: SKILL.md
skills/skill-creator/: SKILL.md
skills/slack-gif-creator/: SKILL.md
skills/summarizer/: SKILL.md
skills/system/: healthcheck_dingtalk.md
skills/theme-factory/: SKILL.md
skills/todoist-task/: SKILL.md
skills/translate-pdf/: SKILL.md
skills/video-downloader/: SKILL.md
skills/web-artifacts-builder/: SKILL.md
skills/webapp-testing/: SKILL.md
skills/wechat-article/: SKILL.md
skills/xiaohongshu-creator/: SKILL.md
skills/xlsx/: SKILL.md
specs/: core-agent.md  skill-system.md  tool-system.md
tests/: conftest.py  test_cancel.py  test_concurrent_streaming.py  test_memory_interaction.py  test_memory_system.py  test_module_deps.py  test_new_features.py  test_refactoring.py  test_scheduler_detailed.py  test_telegram_simple.py
tools/: recover_sessions.py
(+624 files in other folders)
