[project]
name = "seeagent"
version = "1.26.2"
description = "全能自进化AI Agent - 基于Ralph Wiggum模式，永不放弃"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "SeeAgent", email = "zacon365@gmail.com" }
]
keywords = ["ai", "agent", "claude", "autonomous", "self-evolving"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core LLM
    "anthropic>=0.40.0",
    "openai>=1.0.0",

    # MCP (Model Context Protocol)
    "mcp>=1.0.0",

    # Web Search
    "ddgs>=8.0.0",

    # CLI and UI
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "typer>=0.12.0",

    # Async and HTTP
    "httpx[socks]>=0.27.0",
    "aiofiles>=24.1.0",
    "nest-asyncio>=1.5.0",

    # Database
    "aiosqlite>=0.20.0",

    # Data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Git operations
    "gitpython>=3.1.40",

    # YAML for config
    "pyyaml>=6.0.1",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.3",
    "simplejson>=3.19.2",

    # HTTP API (serve mode + Desktop Terminal)
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",

    # Browser automation (built-in)
    "playwright>=1.40.0",
    "browser-use>=0.11.8",
    "langchain-openai>=1.0.0",

    # Image processing
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
# 飞书 IM 通道
feishu = [
    "lark-oapi>=1.2.0",
]

# 钉钉 IM 通道 (Stream 模式)
dingtalk = [
    "dingtalk-stream>=0.24.0",
]

# 企业微信 IM 通道
wework = [
    "aiohttp>=3.9.0",
    "pycryptodome>=3.19.0",
]

# QQ 官方机器人
qqbot = [
    "qq-botpy>=1.1.5",
    "pilk>=0.2.1",              # SILK 语音编解码（QQ 语音格式）
]

# 全部可选依赖（core + 所有 IM 通道）
all = [
    # -- IM 通道 --
    "lark-oapi>=1.2.0",
    "dingtalk-stream>=0.24.0",
    "aiohttp>=3.9.0",
    "pycryptodome>=3.19.0",
    "websockets>=15.0.1",
    "qq-botpy>=1.1.5",
    "pilk>=0.2.1",
]

# 开发依赖
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[project.scripts]
seeagent = "seeagent.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/seeagent", "skills", "mcps", "identity", "VERSION", "pyproject.toml", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["src/seeagent"]

# 把仓库根目录的系统技能、外部技能、内置 MCP 配置一并打进 wheel，
# 保证 `pip install seeagent` 后可用。
# skills/system → site-packages/seeagent/builtin_skills/system/
# skills/*      → site-packages/seeagent/builtin_skills/external/  (不含 system/)
# mcps          → site-packages/seeagent/builtin_mcps/
[tool.hatch.build.targets.wheel.force-include]
# Web frontend (built with: cd apps/setup-center && VITE_BUILD_TARGET=web npm run build:web)
"apps/setup-center/dist-web" = "seeagent/web"
"skills/system" = "seeagent/builtin_skills/system"
"mcps" = "seeagent/builtin_mcps"
"skills/xiaohongshu-creator" = "seeagent/builtin_skills/external/xiaohongshu-creator"
"skills/wechat-article" = "seeagent/builtin_skills/external/wechat-article"
"skills/douyin-tool" = "seeagent/builtin_skills/external/douyin-tool"
"skills/summarizer" = "seeagent/builtin_skills/external/summarizer"
"skills/knowledge-capture" = "seeagent/builtin_skills/external/knowledge-capture"
"skills/pretty-mermaid" = "seeagent/builtin_skills/external/pretty-mermaid"
"skills/ppt-creator" = "seeagent/builtin_skills/external/ppt-creator"
"skills/apify-scraper" = "seeagent/builtin_skills/external/apify-scraper"
"skills/translate-pdf" = "seeagent/builtin_skills/external/translate-pdf"
"skills/todoist-task" = "seeagent/builtin_skills/external/todoist-task"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line length handled by formatter; keep ignored
    "B904",   # require `raise ... from err` inside except (too noisy for now)
    "N806",   # non-lowercase variable in function (constants in functions, third-party patterns)
    "SIM102", # collapsible-if (style-only)
    "SIM103", # needless-bool (style-only)
    "SIM105", # prefer contextlib.suppress (style-only)
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_any_generics = false
warn_return_any = false
warn_unused_ignores = true
no_implicit_optional = true
ignore_errors = true
disable_error_code = [
    "attr-defined",
    "call-arg",
    "no-any-return",
    "union-attr",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--ignore=tests/legacy/test_refactoring.py --ignore=tests/test_refactoring.py"
